[package]
name = "dd-trace-collector"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
rmp = "0.8.11"
tokio = { version = "1.25.0", features = ["full"] }
