[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hyper-client = { path = "../hyper-client" }
hyper = { version = "0.14.24", features = ["http1", "runtime", "server"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync"] }
